--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@babel/node": "^7.8.7",
+    "@lmiller1990/vue-test-utils-next": "^0.0.8",
     "@vue/compiler-sfc": "^3.0.0-alpha.11",
     "babel-jest": "^25.2.6",
     "jest": "^25.2.7",
