--- a/package.json
+++ b/package.json
@@ -4,22 +4,22 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
-    "@types/jest": "^25.2.1",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11"
-  },
-  "dependencies": {
     "@babel/node": "^7.8.7",
     "@lmiller1990/vue-test-utils-next": "^0.0.8",
+    "@types/jest": "^25.2.1",
     "@vue/compiler-sfc": "^3.0.0-alpha.11",
     "babel-jest": "^25.2.6",
     "jest": "^25.2.7",
-    "ts-jest": "^25.3.1",
-    "ts-loader": "^6.2.2",
-    "typescript": "^3.8.3",
-    "vue": "^3.0.0-alpha.11",
     "vue-jest": "^5.0.0-alpha.0",
     "vue-loader": "^16.0.0-alpha.3",
+    "ts-jest": "^25.3.1",
+    "ts-loader": "^6.2.2",
+    "typescript": "^3.8.3,"
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11"
     "webpack-dev-server": "^3.10.3"
+  },
+  "dependencies": {
+    "vue": "^3.0.0-alpha.11"
   }
 }
