--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@babel/preset-env": "^7.9.0",
+    "@vue/test-utils": "^2.0.0-alpha.0",
     "vue": "^3.0.0-alpha.11"
   }
 }
