--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/node": "^7.8.7",
-    "@lmiller1990/vue-test-utils-next": "^0.0.8",
     "@types/jest": "^25.2.1",
     "@vue/compiler-sfc": "^3.0.0-alpha.11",
     "babel-jest": "^25.2.6",
+    "flush-promises": "^1.0.2",
     "jest": "^25.2.7",
     "ts-jest": "^25.3.1",
     "ts-loader": "^6.2.2",
@@ -21,7 +21,10 @@
   },
   "dependencies": {
     "@babel/preset-env": "^7.9.0",
+    "@types/moment": "^2.13.0",
     "@vue/test-utils": "^2.0.0-alpha.1",
-    "vue": "^3.0.0-alpha.11"
+    "moment": "^2.24.0",
+    "vue": "^3.0.0-alpha.12",
+    "vue-router": "^4.0.0-alpha.5"
   }
 }
