--- a/package.json
+++ b/package.json
@@ -3,7 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "test": "yarn jest",
+    "dev": "yarn webpack-dev-server"
+  },
   "devDependencies": {
+    "@babel/preset-env": "^7.9.0",
+    "@types/moment": "^2.13.0",
+    "@vue/test-utils": "^2.0.0-alpha.1",
     "@babel/node": "^7.8.7",
     "@types/jest": "^25.2.1",
     "@vue/compiler-sfc": "^3.0.0-alpha.11",
@@ -20,9 +27,6 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
-    "@babel/preset-env": "^7.9.0",
-    "@types/moment": "^2.13.0",
-    "@vue/test-utils": "^2.0.0-alpha.1",
     "moment": "^2.24.0",
     "vue": "^3.0.0-alpha.12",
     "vue-router": "^4.0.0-alpha.5"
