--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "dev": "yarn webpack-dev-server"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.9.0",
-    "@types/moment": "^2.13.0",
-    "@vue/test-utils": "^2.0.0-alpha.1",
     "@babel/node": "^7.8.7",
+    "@babel/preset-env": "^7.9.0",
     "@types/jest": "^25.2.1",
-    "@vue/compiler-sfc": "^3.0.0-alpha.11",
+    "@types/moment": "^2.13.0",
+    "@vue/compiler-sfc": "^3.0.0-beta.4",
+    "@vue/test-utils": "^2.0.0-alpha.1",
     "babel-jest": "^25.2.6",
     "flush-promises": "^1.0.2",
     "jest": "^25.2.7",
@@ -28,7 +28,7 @@
   },
   "dependencies": {
     "moment": "^2.24.0",
-    "vue": "^3.0.0-alpha.12",
+    "vue": "^3.0.0-beta.4",
     "vue-router": "^4.0.0-alpha.5"
   }
 }
