--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/preset-env": "^7.9.0",
     "@types/highlight.js": "^9.12.3",
     "@types/jest": "^25.2.1",
+    "@types/lodash": "^4.14.150",
     "@types/marked": "^0.7.4",
     "@types/moment": "^2.13.0",
     "@vue/compiler-sfc": "^3.0.0-beta.4",
@@ -33,6 +34,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "highlight.js": "^10.0.2",
+    "lodash": "^4.17.15",
     "marked": "^1.0.0",
     "moment": "^2.24.0",
     "vue": "^3.0.0-beta.4",
