--- a/package.json
+++ b/package.json
@@ -8,15 +8,20 @@
     "dev": "yarn webpack-dev-server"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.9.0",
-    "@types/moment": "^2.13.0",
-    "@vue/test-utils": "^2.0.0-alpha.1",
     "@babel/node": "^7.8.7",
+    "@babel/preset-env": "^7.9.0",
+    "@types/highlight.js": "^9.12.3",
     "@types/jest": "^25.2.1",
-    "@vue/compiler-sfc": "^3.0.0-alpha.11",
+    "@types/lodash": "^4.14.150",
+    "@types/marked": "^0.7.4",
+    "@types/moment": "^2.13.0",
+    "@vue/compiler-sfc": "^3.0.0-beta.4",
+    "@vue/test-utils": "^2.0.0-alpha.1",
     "babel-jest": "^25.2.6",
+    "css-loader": "^3.5.3",
     "flush-promises": "^1.0.2",
     "jest": "^25.2.7",
+    "style-loader": "^1.2.1",
     "ts-jest": "^25.3.1",
     "ts-loader": "^6.2.2",
     "typescript": "^3.8.3",
@@ -27,8 +32,12 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "highlight.js": "^10.0.2",
+    "lodash": "^4.17.15",
+    "marked": "^1.0.0",
     "moment": "^2.24.0",
-    "vue": "^3.0.0-alpha.12",
-    "vue-router": "^4.0.0-alpha.5"
+    "vue": "^3.0.0-beta.4",
+    "vue-router": "^4.0.0-alpha.9"
   }
 }
