--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "css-loader": "^3.5.3",
     "flush-promises": "^1.0.2",
     "jest": "^25.2.7",
+    "raw-loader": "^4.0.1",
     "style-loader": "^1.2.1",
     "ts-jest": "^25.3.1",
     "ts-loader": "^6.2.2",
