--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.5.3",
     "flush-promises": "^1.0.2",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^25.2.7",
     "raw-loader": "^4.0.1",
     "style-loader": "^1.2.1",
