--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "@types/lodash": "^4.14.150",
     "@types/marked": "^0.7.4",
     "@types/moment": "^2.13.0",
-    "@vue/compiler-sfc": "^3.0.0-beta.4",
-    "@vue/test-utils": "^2.0.0-alpha.6",
+    "@vue/compiler-sfc": "^3.0.0-rc.9",
+    "@vue/test-utils": "^2.0.0-beta.3",
     "babel-jest": "^25.2.6",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.5.3",
@@ -41,7 +41,7 @@
     "lodash": "^4.17.15",
     "marked": "^1.0.0",
     "moment": "^2.24.0",
-    "vue": "^3.0.0-rc.5",
+    "vue": "^3.0.0-rc.9",
     "vue-router": "^4.0.0-alpha.13"
   }
 }
