--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "lodash": "^4.17.15",
     "marked": "^1.0.0",
     "moment": "^2.24.0",
-    "vue": "^3.0.0-rc.5",
+    "vue": "^3.0.2",
     "vue-router": "^4.0.0-alpha.13"
   }
 }
