--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@types/marked": "^0.7.4",
     "@types/moment": "^2.13.0",
     "@vue/compiler-sfc": "^3.0.0-rc.9",
-    "@vue/test-utils": "^2.0.0-beta.3",
+    "@vue/test-utils": "^2.0.0-rc.3",
     "babel-jest": "^25.2.6",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.5.3",
@@ -41,7 +41,8 @@
     "lodash": "^4.17.15",
     "marked": "^1.0.0",
     "moment": "^2.24.0",
-    "vue": "^3.0.2",
-    "vue-router": "^4.0.0-alpha.13"
+    "vue": "^3.0.7",
+    "vue-router": "^4.0.4",
+    "vue-router-mock": "^0.0.2"
   }
 }
